Add editable user display names
